chore: add is bolded to text
